syntax = "proto3";

package aurora.metrics.v1;

option go_package = "aurora-kvm-agent/proto/metricsv1";

// ===== REALTIME DASHBOARD FRAME (LIGHTWEIGHT) =====

message NodeMetricsLite {
  string node_id = 1;
  string hostname = 2;
  int64 timestamp_unix = 3;

  // ===== CPU =====
  double cpu_usage_percent = 4;
  double cpu_load_1 = 5;
  double cpu_load_5 = 6;
  double cpu_load_15 = 7;

  uint64 cpu_cores = 8;
  double cpu_run_queue = 9;

  // ===== RAM =====
  double ram_usage_percent = 10;
  uint64 ram_used_bytes = 11;
  uint64 ram_total_bytes = 12;

  // ===== DISK TOTAL =====
  double disk_read_mb_s = 13;
  double disk_write_mb_s = 14;
  double disk_total_mb_s = 15;
  double disk_util_percent = 16;
  double disk_iops = 17;

  // ===== NETWORK TOTAL =====
  double net_rx_mb_s = 18;
  double net_tx_mb_s = 19;
  double net_total_mb_s = 20;
  double net_packet_rate = 21;

  // ===== GPU TOTAL =====
  uint64 gpu_count = 22;
  double gpu_total_util_percent = 23;
  double gpu_memory_util_percent = 24;
  uint64 gpu_memory_used_bytes = 25;
  uint64 gpu_memory_total_bytes = 26;

  // ===== SYSTEM =====
  uint64 process_count = 27;
  uint64 thread_count = 28;

  double system_load_percent = 29;
}

// frame để stream
message NodeMetricsLiteFrame {
  string node_id = 1;
  int64 timestamp_unix = 2;
  NodeMetricsLite metrics = 3;
}

// BE subscribe luồng lite theo node, mặc định mỗi 1 giây
message NodeLiteSubscribeRequest {
  string node_id = 1;
  uint32 interval_seconds = 2; // default = 1
}

service NodeMetricsLiteService {
  rpc StreamNodeLiteMetrics(NodeLiteSubscribeRequest)
      returns (stream NodeMetricsLiteFrame);
}
